LayoutTest http/tests/media/media-stream/disconnected-frame.html to consistently fail an assertion: !m_adoptionIsRequired https://bugs.webkit.org/show_bug.cgi?id=181264

Patch by Youenn Fablet <youenn@apple.com> on 2018-01-03
Reviewed by Eric Carlson.

Covered by http/tests/media/media-stream/disconnected-frame.html not crashing anymore in Debug builds.
Calling suspendIfNeeded in create method instead of constructor.

* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::create):
(WebCore::UserMediaRequest::UserMediaRequest):

Canonical link: https://commits.webkit.org/197106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226383 268f45cc-cd09-0410-ab3c-d52691b4dbfc